0027674: BRepOffsetAPI_ThruSections make invalid shape if sections are connected at ends

The edge which will be created between same vertexes should be degenerated and without 3d curve.

Small correction of test case for issue CR27674